# SeaORM-mytutorial

./: README.md
pattern1/: docker-compose.yaml
pattern1/bakery-backend/: Cargo.toml  postgres.sh
pattern1/bakery-backend/migration/: Cargo.toml
pattern1/bakery-backend/migration/src/: lib.rs  m20220101_000001_create_bakery_table.rs  m20220101_000001_create_chef_table.rs
pattern1/bakery-backend/src/: main.rs
pattern1/bakery-backend/src/entities/: chef.rs
pattern2/: Cargo.toml
pattern2/src/: main.rs
